Corrected sticky header width. To fix scrollbar issues in IE9

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -193,7 +193,7 @@ a.beta-blocker {text-decoration: none; cursor:default;}
 	padding: 4px 4px 0px 5px;
 	left: -32px;
 	height: 85px;
-	width: 1062px !important;
+	width: 1060px !important;
 	.container {
 		width: 100%;
 		padding: 5px;
